--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="Organise your pissup" />
+		<meta name="description" content="Free and simple, the best way to find a date that works for everyone. Meet your friends for a beer without the hassle of having to organise them.">
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 		%svelte.head%
